--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.6.2",
+    "base-64": "^1.0.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-agora": "^4.2.6",
     "react-native-device-info": "^10.11.0",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-pager-view": "^6.2.1",
